updated css shortcuts URLs

--- a/pages/get-started.html
+++ b/pages/get-started.html
@@ -13,7 +13,7 @@ permalink: "get-started.html"
      <ul>
       <li><a href="/whats-new.html">What's new in V6</a></li>
       <li><a href="/download-and-setup.html">Download and setup</a></li>
-      <li><a href="/css-shortcuts/css-classes-shortcuts.html">CSS classes shortcuts</a></li>
+      <li><a href="/get-started/css-classes-shortcuts/">CSS classes shortcuts</a></li>
      </ul>
     </li>
    </ul>
@@ -59,7 +59,7 @@ permalink: "get-started.html"
     </a>
    </div>
    <div class="col-md-4 m-t-md">
-    <a href="/css-shortcuts/css-classes-shortcuts.html"
+    <a href="/get-started/css-classes-shortcuts/"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
      title="CSS classes shortcuts card">
      <div class="p-a-md d-flex align-content-center">
