--- a/pages/sample/css-classes-shortcuts.html
+++ b/pages/sample/css-classes-shortcuts.html
@@ -2,7 +2,7 @@
 title: CSS classes shortcuts
 landing: Components
 layout: page.njk
-permalink: "css-shortcuts/css-classes-shortcuts.html"
+permalink: "get-started/css-classes-shortcuts/index.html"
 ---
 
 
@@ -12,16 +12,15 @@ permalink: "css-shortcuts/css-classes-shortcuts.html"
   <!-- Side navigation -->
   <nav aria-labelledby="color-schemes-list" class="side-navigation sticky-6">
    <ul class="list-navigation">
-    <li><a href="/css-shortcuts/css-classes-shortcuts.html" id="color-schemes-list" class="active">CSS classes
+    <li><a href="/get-started/css-classes-shortcuts/" id="color-schemes-list" class="active">CSS classes
       shortcuts</a>
      <ul>
-      <li><a href="/css-shortcuts/utility-css-classes.html">Utility CSS classes</a></li>
-      <li><a href="/css-shortcuts/gradient-backgrounds.html">Gradient backgrounds</a></li>
-      <li><a href="/css-shortcuts/spacing.html">Spacing</a></li>
-      <li><a href="/css-shortcuts/text-accent.html">Text accent</a></li>
+      <li><a href="/get-started/css-classes-shortcuts/utility-css-classes.html">Utility CSS classes</a></li>
+      <li><a href="/get-started/css-classes-shortcuts/gradient-backgrounds.html">Gradient backgrounds</a></li>
+      <li><a href="/get-started/css-classes-shortcuts/spacing.html">Spacing</a></li>
+      <li><a href="/get-started/css-classes-shortcuts/text-accent.html">Text accent</a></li>
      </ul>
     </li>
-    <li><a href="/components.html">All components</a>
    </ul>
   </nav>
  </div>
@@ -38,7 +37,7 @@ permalink: "css-shortcuts/css-classes-shortcuts.html"
 
   <div class="row">
    <div class="col-md-6 m-t-md">
-    <a href="/css-shortcuts/utility-css-classes.html"
+    <a href="/get-started/css-classes-shortcuts/utility-css-classes.html"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
      title="Utility CSS classes">
      <div class="p-a">
@@ -49,7 +48,7 @@ permalink: "css-shortcuts/css-classes-shortcuts.html"
     </a>
    </div>
    <div class="col-md-6 m-t-md">
-    <a href="/css-shortcuts/gradient-backgrounds.html"
+    <a href="/get-started/css-classes-shortcuts/gradient-backgrounds.html"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
      title="Gradient Backgrounds">
      <div class="p-a">
@@ -66,7 +65,7 @@ permalink: "css-shortcuts/css-classes-shortcuts.html"
 
   <div class="row">
    <div class="col-md-6 m-t-md">
-    <a href="/css-shortcuts/spacing.html"
+    <a href="/get-started/css-classes-shortcuts/spacing.html"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
      title="Spacing">
      <div class="p-a">
@@ -78,7 +77,7 @@ permalink: "css-shortcuts/css-classes-shortcuts.html"
    </div>
 
    <div class="col-md-6 m-t-md">
-    <a href="/css-shortcuts/text-accent.html"
+    <a href="/get-started/css-classes-shortcuts/text-accent.html"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
      title="Text Accent Colors">
      <div class="p-a">
