--- a/pages/sample/css-spacing.html
+++ b/pages/sample/css-spacing.html
@@ -2,7 +2,7 @@
 title: Spacing
 landing: Components
 layout: page.njk
-permalink: "css-shortcuts/spacing.html"
+permalink: "get-started/css-classes-shortcuts/spacing.html"
 ---
 
 <div class="row">
@@ -10,15 +10,14 @@ permalink: "css-shortcuts/spacing.html"
   <!-- Side navigation -->
   <nav aria-labelledby="color-schemes-list" class="side-navigation sticky-6">
    <ul class="list-navigation">
-    <li><a href="/css-shortcuts/css-classes-shortcuts.html" id="color-schemes-list">CSS classes shortcuts</a>
+    <li><a href="/get-started/css-classes-shortcuts/" id="color-schemes-list">CSS classes shortcuts</a>
      <ul>
-      <li><a href="/css-shortcuts/utility-css-classes.html">Utility CSS classes</a></li>
-      <li><a href="/css-shortcuts/gradient-backgrounds.html">Gradient backgrounds</a></li>
-      <li><a href="/css-shortcuts/spacing.html" class="active">Spacing</a></li>
-      <li><a href="/css-shortcuts/text-accent.html">Text accent</a></li>
+      <li><a href="/get-started/css-classes-shortcuts/utility-css-classes.html">Utility CSS classes</a></li>
+      <li><a href="/get-started/css-classes-shortcuts/gradient-backgrounds.html">Gradient backgrounds</a></li>
+      <li><a href="/get-started/css-classes-shortcuts/spacing.html" class="active">Spacing</a></li>
+      <li><a href="/get-started/css-classes-shortcuts/text-accent.html">Text accent</a></li>
      </ul>
     </li>
-    <li><a href="/components.html">All components</a>
    </ul>
   </nav>
  </div>
