--- a/pages/sample/css-text-accent.html
+++ b/pages/sample/css-text-accent.html
@@ -2,19 +2,19 @@
 title: Text Accent
 landing: Components
 layout: page.njk
-permalink: "css-shortcuts/text-accent.html"
+permalink: "get-started/css-classes-shortcuts/text-accent.html"
 ---
 <div class="row">
  <div class="col-md-3" role="complementary">
   <!-- Side navigation -->
   <nav aria-labelledby="color-schemes-list" class="side-navigation sticky-6">
    <ul class="list-navigation">
-    <li><a href="/css-shortcuts/css-classes-shortcuts.html" id="color-schemes-list">CSS classes shortcuts</a>
+    <li><a href="/get-started/css-classes-shortcuts/" id="color-schemes-list">CSS classes shortcuts</a>
      <ul>
-      <li><a href="/css-shortcuts/utility-css-classes.html">Utility CSS classes</a></li>
-      <li><a href="/css-shortcuts/gradient-backgrounds.html">Gradient backgrounds</a></li>
-      <li><a href="/css-shortcuts/spacing.html">Spacing</a></li>
-      <li><a href="/css-shortcuts/text-accent.html" class="active">Text accent</a>
+      <li><a href="/get-started/css-classes-shortcuts/utility-css-classes.html">Utility CSS classes</a></li>
+      <li><a href="/get-started/css-classes-shortcuts/gradient-backgrounds.html">Gradient backgrounds</a></li>
+      <li><a href="/get-started/css-classes-shortcuts/spacing.html">Spacing</a></li>
+      <li><a href="/get-started/css-classes-shortcuts/text-accent.html" class="active">Text accent</a>
        <ul>
         <li><a href="#Accent-colors">Accent colors</a></li>
         <li><a href="#Text-highlight">Text highlight</a></li>
@@ -22,7 +22,6 @@ permalink: "css-shortcuts/text-accent.html"
       </li>
      </ul>
     </li>
-    <li><a href="/components.html">All components</a>
    </ul>
   </nav>
  </div>
