--- a/pages/sample/css-utility-css-classes.html
+++ b/pages/sample/css-utility-css-classes.html
@@ -2,7 +2,7 @@
 title: Utility CSS classes
 landing: Components
 layout: page.njk
-permalink: "css-shortcuts/utility-css-classes.html"
+permalink: "get-started/css-classes-shortcuts/utility-css-classes.html"
 ---
 
 
@@ -12,9 +12,10 @@ permalink: "css-shortcuts/utility-css-classes.html"
   <!-- Side navigation -->
   <nav aria-labelledby="color-schemes-list" class="side-navigation sticky-6">
    <ul class="list-navigation">
-    <li><a href="/css-shortcuts/css-classes-shortcuts.html" id="color-schemes-list">CSS classes shortcuts</a>
+    <li><a href="/get-started/css-classes-shortcuts/" id="color-schemes-list">CSS classes
+      shortcuts</a>
      <ul>
-      <li><a href="/css-shortcuts/utility-css-classes.html" class=" active">Utility CSS classes</a>
+      <li><a href="/get-started/css-classes-shortcuts/utility-css-classes.html" class=" active">Utility CSS classes</a>
        <ul>
         <li><a href="#borders">Borders</a></li>
         <li><a href="#colors">Colors &amp; backgrounds</a></li>
@@ -26,12 +27,11 @@ permalink: "css-shortcuts/utility-css-classes.html"
         <li><a href="#transitions">Transitions &amp; transforms</a></li>
        </ul>
       </li>
-      <li><a href="/css-shortcuts/gradient-backgrounds.html">Gradient backgrounds</a></li>
-      <li><a href="/css-shortcuts/spacing.html">Spacing</a></li>
-      <li><a href="/css-shortcuts/text-accent.html">Text accent</a></li>
+      <li><a href="/get-started/css-classes-shortcuts/gradient-backgrounds.html">Gradient backgrounds</a></li>
+      <li><a href="/get-started/css-classes-shortcuts/spacing.html">Spacing</a></li>
+      <li><a href="/get-started/css-classes-shortcuts/text-accent.html">Text accent</a></li>
      </ul>
     </li>
-    <li><a href="/components.html/">All components</a>
    </ul>
   </nav>
  </div>
