--- a/pages/structure.html
+++ b/pages/structure.html
@@ -182,7 +182,7 @@ permalink: "structure.html"
 
 
   <div class="row">
-   <!-- <div class="col-md-4 m-t-md">
+   <div class="col-md-4 m-t-md">
     <a href="/structure/mobile-controls.html"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
      title="Mobile Controls component">
@@ -198,7 +198,7 @@ permalink: "structure.html"
       </p>
      </div>
     </a>
-   </div> -->
+   </div>
    <div class="col-md-4 m-t-md">
     <a href="/structure/search.html"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
@@ -228,6 +228,12 @@ permalink: "structure.html"
      </div>
     </a>
    </div>
+
+  </div>
+
+
+
+  <div class="row">
    <div class="col-md-4 m-t-md">
     <a href="/structure/footer.html"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
@@ -242,12 +248,6 @@ permalink: "structure.html"
      </div>
     </a>
    </div>
-  </div>
-
-
-
-  <div class="row">
-
 
 
 
