--- a/pages/sample/css-gradient-backgrounds.html
+++ b/pages/sample/css-gradient-backgrounds.html
@@ -2,27 +2,27 @@
 title: Gradient Gackgrounds
 landing: Components
 layout: page.njk
-permalink: "css-shortcuts/gradient-backgrounds.html"
+permalink: "get-started/css-classes-shortcuts/gradient-backgrounds.html"
 ---
 <div class="row">
  <div class="col-md-3" role="complementary">
   <!-- Side navigation -->
   <nav aria-labelledby="color-schemes-list" class="side-navigation sticky-6">
    <ul class="list-navigation">
-    <li><a href="/css-shortcuts/css-classes-shortcuts.html" id="color-schemes-list">CSS classes shortcuts</a>
+    <li><a href="/get-started/css-classes-shortcuts/" id="color-schemes-list">CSS classes shortcuts</a>
      <ul>
-      <li><a href="/css-shortcuts/utility-css-classes.html">Utility CSS classes</a></li>
-      <li><a href="/css-shortcuts/gradient-backgrounds.html" class="active">Gradient backgrounds</a>
+      <li><a href="/get-started/css-classes-shortcuts/utility-css-classes.html">Utility CSS classes</a></li>
+      <li><a href="/get-started/css-classes-shortcuts/gradient-backgrounds.html" class="active">Gradient
+        backgrounds</a>
        <ul>
         <li><a href="#Linear-gradients">Linear gradients</a></li>
         <li><a href="#Radial-gradients">Radial gradients</a></li>
        </ul>
       </li>
-      <li><a href="/css-shortcuts/spacing.html">Spacing</a></li>
-      <li><a href="/css-shortcuts/text-accent.html">Text accent</a></li>
+      <li><a href="/get-started/css-classes-shortcuts/spacing.html">Spacing</a></li>
+      <li><a href="/get-started/css-classes-shortcuts/text-accent.html">Text accent</a></li>
      </ul>
     </li>
-    <li><a href="/components.html">All components</a>
    </ul>
   </nav>
  </div>
