--- a/pages/sample/css-classes-shortcuts.html
+++ b/pages/sample/css-classes-shortcuts.html
@@ -1,6 +1,6 @@
 ---
 title: CSS classes shortcuts
-landing: Components
+landing: Get started
 layout: page.njk
 permalink: "get-started/css-classes-shortcuts/index.html"
 ---
@@ -18,7 +18,7 @@ permalink: "get-started/css-classes-shortcuts/index.html"
       <li><a href="/get-started/css-classes-shortcuts/utility-css-classes.html">Utility CSS classes</a></li>
       <li><a href="/get-started/css-classes-shortcuts/gradient-backgrounds.html">Gradient backgrounds</a></li>
       <li><a href="/get-started/css-classes-shortcuts/spacing.html">Spacing</a></li>
-      <li><a href="/get-started/css-classes-shortcuts/text-accent.html">Text accent</a></li>
+      <li><a href="/get-started/css-classes-shortcuts/text-accent-colors.html">Text accent colors</a></li>
      </ul>
     </li>
    </ul>
@@ -77,7 +77,7 @@ permalink: "get-started/css-classes-shortcuts/index.html"
    </div>
 
    <div class="col-md-6 m-t-md">
-    <a href="/get-started/css-classes-shortcuts/text-accent.html"
+    <a href="/get-started/css-classes-shortcuts/text-accent-colors.html"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
      title="Text Accent Colors">
      <div class="p-a">
