--- a/pages/sample/css-gradient-backgrounds.html
+++ b/pages/sample/css-gradient-backgrounds.html
@@ -1,6 +1,6 @@
 ---
 title: Gradient Gackgrounds
-landing: Components
+landing: Get started
 layout: page.njk
 permalink: "get-started/css-classes-shortcuts/gradient-backgrounds.html"
 ---
@@ -20,7 +20,7 @@ permalink: "get-started/css-classes-shortcuts/gradient-backgrounds.html"
        </ul>
       </li>
       <li><a href="/get-started/css-classes-shortcuts/spacing.html">Spacing</a></li>
-      <li><a href="/get-started/css-classes-shortcuts/text-accent.html">Text accent</a></li>
+      <li><a href="/get-started/css-classes-shortcuts/text-accent-colors.html">Text accent colors</a></li>
      </ul>
     </li>
    </ul>
