--- a/pages/sample/css-spacing.html
+++ b/pages/sample/css-spacing.html
@@ -1,6 +1,6 @@
 ﻿---
 title: Spacing
-landing: Components
+landing: Get started
 layout: page.njk
 permalink: "get-started/css-classes-shortcuts/spacing.html"
 ---
@@ -15,7 +15,7 @@ permalink: "get-started/css-classes-shortcuts/spacing.html"
       <li><a href="/get-started/css-classes-shortcuts/utility-css-classes.html">Utility CSS classes</a></li>
       <li><a href="/get-started/css-classes-shortcuts/gradient-backgrounds.html">Gradient backgrounds</a></li>
       <li><a href="/get-started/css-classes-shortcuts/spacing.html" class="active">Spacing</a></li>
-      <li><a href="/get-started/css-classes-shortcuts/text-accent.html">Text accent</a></li>
+      <li><a href="/get-started/css-classes-shortcuts/text-accent-colors.html">Text accent colors</a></li>
      </ul>
     </li>
    </ul>
