--- a/pages/sample/css-text-accent.html
+++ b/pages/sample/css-text-accent.html
@@ -1,8 +1,8 @@
 ﻿---
 title: Text Accent
-landing: Components
+landing: Get started
 layout: page.njk
-permalink: "get-started/css-classes-shortcuts/text-accent.html"
+permalink: "get-started/css-classes-shortcuts/text-accent-colors.html"
 ---
 <div class="row">
  <div class="col-md-3" role="complementary">
@@ -14,7 +14,7 @@ permalink: "get-started/css-classes-shortcuts/text-accent.html"
       <li><a href="/get-started/css-classes-shortcuts/utility-css-classes.html">Utility CSS classes</a></li>
       <li><a href="/get-started/css-classes-shortcuts/gradient-backgrounds.html">Gradient backgrounds</a></li>
       <li><a href="/get-started/css-classes-shortcuts/spacing.html">Spacing</a></li>
-      <li><a href="/get-started/css-classes-shortcuts/text-accent.html" class="active">Text accent</a>
+      <li><a href="/get-started/css-classes-shortcuts/text-accent-colors.html" class="active">Text accent colors</a>
        <ul>
         <li><a href="#Accent-colors">Accent colors</a></li>
         <li><a href="#Text-highlight">Text highlight</a></li>
