--- a/pages/sample/css-utility-css-classes.html
+++ b/pages/sample/css-utility-css-classes.html
@@ -1,6 +1,6 @@
 ---
 title: Utility CSS classes
-landing: Components
+landing: Get started
 layout: page.njk
 permalink: "get-started/css-classes-shortcuts/utility-css-classes.html"
 ---
@@ -29,7 +29,7 @@ permalink: "get-started/css-classes-shortcuts/utility-css-classes.html"
       </li>
       <li><a href="/get-started/css-classes-shortcuts/gradient-backgrounds.html">Gradient backgrounds</a></li>
       <li><a href="/get-started/css-classes-shortcuts/spacing.html">Spacing</a></li>
-      <li><a href="/get-started/css-classes-shortcuts/text-accent.html">Text accent</a></li>
+      <li><a href="/get-started/css-classes-shortcuts/text-accent-colors.html">Text accent colors</a></li>
      </ul>
     </li>
    </ul>
