--- a/pages/sitemap.html
+++ b/pages/sitemap.html
@@ -11,11 +11,19 @@ permalink: "sitemap.html"
 
    <div class="col-md-6">
     <a class="d-block m-y" href="/">Web Template homepage</a>
+
+    <a class="d-block m-y" href="/template-updates.html">Template updates</a>
+    <h2 class="h3">Get started</h2>
+    <a class="d-block m-y" href="/get-started.html">Get started</a>
     <ul>
      <li class="m-t-sm"><a href="/whats-new.html">What's new</a></li>
+     <li class="m-t-sm"><a href="/structure/utility-header.html">Download and setup</a></li>
+     <li class="m-t-sm"><a href="/get-started/css-classes-shortcuts/">CSS classes shortcuts</a></li>
+     <li class="m-t-sm"><a href="/get-started/css-classes-shortcuts/gradient-backgrounds.html">Gradient backgrounds</a>
+     </li>
+     <li class="m-t-sm"><a href="/get-started/css-classes-shortcuts/spacing.html">Spacing</a></li>
+     <li class="m-t-sm"><a href="/get-started/css-classes-shortcuts/text-accent-colors.html">Text accent colors</a></li>
     </ul>
-    <a class="d-block m-y" href="/template-updates.html">Template updates</a>
-    <a class="d-block m-y" href="/get-started.html">Get started</a>
 
     <h2 class="h3">Structure</h2>
     <a class="d-block m-y" href="/structure.html">Structure</a>
