made QA fixes to my pages

--- a/pages/sample/card-grid.html
+++ b/pages/sample/card-grid.html
@@ -22,10 +22,10 @@ permalink: "patterns/card-grid.html"
 <!--TABS-->
 <div class="tab-group responsive">
  <ul id="tabs1" class="nav nav-tabs" role="tablist">
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a id="tab-example1" href="#pane-example1" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
   </li>
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a id="tab-html1" href="#pane-html1" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
   </li>
 
@@ -89,10 +89,10 @@ permalink: "patterns/card-grid.html"
 <!--TABS-->
 <div class="tab-group responsive">
  <ul id="tabs4" class="nav nav-tabs" role="tablist">
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a id="tab-example4" href="#pane-example4" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
   </li>
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a id="tab-html4" href="#pane-html4" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
   </li>
 
@@ -150,10 +150,10 @@ permalink: "patterns/card-grid.html"
 <!--TABS-->
 <div class="tab-group responsive">
  <ul id="tabs2" class="nav nav-tabs" role="tablist">
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a id="tab-example2" href="#pane-example2" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
   </li>
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a id="tab-html2" href="#pane-html2" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
   </li>
 
@@ -214,9 +214,9 @@ permalink: "patterns/card-grid.html"
 <h3>When and how to use it </h3>
 <h4>Card grid</h4>
 
-<p>Keep cards simple. Cards are meant to show a taste of the available information. Don’t overload cards with more
+<p>Keep cards simple. Cards are meant to show a taste of the available information. Don't overload cards with more
  information than necessary.</p>
-<p>Communicate clearly about a card’s destination. Cards take someone to another experience, so the content should focus
+<p>Communicate clearly about a card's destination. Cards take someone to another experience, so the content should focus
  on the value a person can find when they get there.</p>
 
 <p>Cards, by definition, should have some form of interaction such as viewing, editing, purchasing, etc. Some actions
@@ -237,7 +237,7 @@ permalink: "patterns/card-grid.html"
  is no longer new.</p>
 
 <h4>Images</h4>
-<p>Don’t use a commonly used icon for a different purpose. </p>
+<p>Don't use a commonly used icon for a different purpose. </p>
 <p>We use photos and illustrations for visualizing information. We follow these guidelines:</p>
 <ul>
  <li>Do not use images as unnecessary decoration. Photos and images should be used to support the content.</li>
