--- a/pages/sample/structure-footer.html
+++ b/pages/sample/structure-footer.html
@@ -40,7 +40,7 @@ permalink: "structure/footer.html"
   <p>The footer contains a set of links that go on all the pages of the website.</p>
   <p>The footer always includes:</p>
   <ul>
-   <li>The CA<span>.</span>gov logo on the left that links to the CA<span>.</span>gov site.</li>
+   <li>The CA<span>.</span>gov logo on the left that links to the CA<span>.</span>gov site</li>
    <li>A set of standard links:<ul>
      <li>Conditions of use</li>
      <li>Privacy policy</li>
@@ -49,14 +49,14 @@ permalink: "structure/footer.html"
     </ul>
    </li>
 
-   <li>The copyright notice.</li>
+   <li>The copyright notice</li>
   </ul>
 
 
   <p>The footer can also include:</p>
   <ul>
-   <li>An optional logo on the left that links back to the homepage for the website.</li>
-   <li>Customizable links.</li>
+   <li>An optional logo on the left that links back to the homepage for the website</li>
+   <li>Customizable links</li>
    <li>Social media icons that link to official social media accounts. These could be for a department or a campaign.
     The available social media icons include:
     <ul>
@@ -75,13 +75,13 @@ permalink: "structure/footer.html"
 
   <div class="tab-group responsive">
    <ul id="tabs2" class="nav nav-tabs" role="tablist">
-    <li class="nav-item">
+    <li class="nav-item" role="presentation">
      <a id="tab-example2" href="#pane-example2" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item" role="presentation">
      <a id="tab-html2" href="#pane-html2" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item" role="presentation">
      <a id="tab-include2" href="#pane-include2" class="nav-link" data-bs-toggle="tab" role="tab">Nunjucks include</a>
     </li>
    </ul>
@@ -182,9 +182,9 @@ permalink: "structure/footer.html"
   <p>Do not use the site footer:</p>
 
   <ul>
-   <li>For primary calls to action.</li>
-   <li>For information to primary user needs.</li>
-   <li>As secondary navigation.</li>
+   <li>For primary calls to action</li>
+   <li>For information to primary user needs</li>
+   <li>As secondary navigation</li>
   </ul>
   <p>Do not add other elements to or change the footer. Use it only as designed. </p>
   <p>Do not send them to the general <a href="https://www.ca.gov/contact/">CA.gov contact page</a> unless it's
