--- a/pages/sample/structure-site-navigation.html
+++ b/pages/sample/structure-site-navigation.html
@@ -73,10 +73,10 @@ permalink: "structure/site-navigation.html"
   <!--Tabs 1-->
   <div class="tab-group responsive">
    <ul id="tabs1" class="nav nav-tabs" role="tablist">
-    <li class="nav-item">
+    <li class="nav-item" role="presentation">
      <a id="tab-example1" href="#pane-example1" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item" role="presentation">
      <a id="tab-html1" href="#pane-html1" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
     </li>
     <li class="nav-item">
@@ -86,7 +86,7 @@ permalink: "structure/site-navigation.html"
    </ul>
 
 
-   <div class="tab-content">
+   <div class="tab-content" role="presentation">
     <div id="pane-example1" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example1">
      <div class="card-header" id="heading-example1">
       <h4 class="my-0 w-100">
@@ -98,11 +98,7 @@ permalink: "structure/site-navigation.html"
      </div>
      <div id="collapse-example1" class="collapse show" role="tabpanel" aria-labelledby="heading-example1">
       <div class="card-body">
-       <h3 class="h4 m-t-0">Screenshot</h3>
-       <img src="/images/navigation-single.jpg" alt="Single level naviagiton" class="img-fluid m-b-md">
-
-       <!-- <a href="/structure/navigation-single.html" class="btn btn-outline-primary">Live example <span
-         class="ca-gov-icon-arrow-next" aria-hidden="true"></span></a> -->
+       <img src="/images/navigation-single.jpg" alt="Single level naviagiton" class="img-fluid">
       </div>
      </div>
     </div>
@@ -157,13 +153,13 @@ permalink: "structure/site-navigation.html"
   <!--Tabs 2-->
   <div class="tab-group responsive">
    <ul id="tabs2" class="nav nav-tabs" role="tablist">
-    <li class="nav-item">
+    <li class="nav-item" role="presentation">
      <a id="tab-example2" href="#pane-example2" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item" role="presentation">
      <a id="tab-html2" href="#pane-html2" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item" role="presentation">
      <a id="tab-include2" href="#pane-include2" class="nav-link" data-bs-toggle="tab" role="tab">Implementation
       notes</a>
     </li>
@@ -182,13 +178,8 @@ permalink: "structure/site-navigation.html"
      </div>
      <div id="collapse-example2" class="collapse show" role="tabpanel" aria-labelledby="heading-example2">
       <div class="card-body">
-       <h3 class="h4 m-t-0">Screenshot</h3>
        <img src="/images/navigation-dropdown.jpg" alt="Dropdown Naviagiton"
-        class="img-fluid brd-solid-1 brd-gray-light shadow2 m-b-md">
-
-       <!-- <a href="/structure/navigation-dropdown.html" class="btn btn-outline-primary"
-        title="dropdown menu live example'">Live example <span class="ca-gov-icon-arrow-next"
-         aria-hidden="true"></span></a> -->
+        class="img-fluid brd-solid-1 brd-gray-light">
       </div>
      </div>
     </div>
@@ -242,13 +233,13 @@ permalink: "structure/site-navigation.html"
   <!--Tabs 3-->
   <div class="tab-group responsive">
    <ul id="tabs3" class="nav nav-tabs" role="tablist">
-    <li class="nav-item">
+    <li class="nav-item" role="presentation">
      <a id="tab-example3" href="#pane-example3" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item" role="presentation">
      <a id="tab-html3" href="#pane-html3" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item" role="presentation">
      <a id="tab-include3" href="#pane-include3" class="nav-link" data-bs-toggle="tab" role="tab">Implementation
       notes</a>
     </li>
@@ -267,12 +258,7 @@ permalink: "structure/site-navigation.html"
      </div>
      <div id="collapse-example3" class="collapse show" role="tabpanel" aria-labelledby="heading-example3">
       <div class="card-body">
-       <h3 class="h4 m-t-0">Screenshot</h3>
-       <img src="/images/navigation-flex.jpg" alt="Naviagiton with icons"
-        class="img-fluid brd-solid-1 brd-gray-light shadow2 m-b-md">
-
-       <!-- <a href="/structure/navigation-megamenu.html" class="btn btn-outline-primary" title="megamenu live example'">Live
-        example <span class="ca-gov-icon-arrow-next" aria-hidden="true"></span></a> -->
+       <img src="/images/navigation-flex.jpg" alt="Naviagiton with icons" class="img-fluid brd-solid-1 brd-gray-light">
       </div>
      </div>
     </div>
@@ -376,13 +362,13 @@ permalink: "structure/site-navigation.html"
   <!--Tabs 4-->
   <div class="tab-group responsive">
    <ul id="tabs4" class="nav nav-tabs" role="tablist">
-    <li class="nav-item">
+    <li class="nav-item" role="presentation">
      <a id="tab-example4" href="#pane-example4" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item" role="presentation">
      <a id="tab-html4" href="#pane-html4" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item" role="presentation">
      <a id="tab-include4" href="#pane-include4" class="nav-link" data-bs-toggle="tab" role="tab">Implementation
       notes</a>
     </li>
@@ -401,12 +387,7 @@ permalink: "structure/site-navigation.html"
      </div>
      <div id="collapse-example4" class="collapse show" role="tabpanel" aria-labelledby="heading-example4">
       <div class="card-body">
-       <h3 class="h4 m-t-0">Screenshot</h3>
-       <img src="/images/navigation-icons.jpg" alt="Naviagiton with icons" class="img-fluid m-b-md">
-
-       <!-- <a href="/structure/navigation-icons.html" class="btn btn-outline-primary"
-        title="Naviagitonwith icons live example'">Live
-        example <span class="ca-gov-icon-arrow-next" aria-hidden="true"></span></a> -->
+       <img src="/images/navigation-icons.jpg" alt="Naviagiton with icons" class="img-fluid">
       </div>
      </div>
     </div>
@@ -484,7 +465,7 @@ permalink: "structure/site-navigation.html"
    <li>Audience or user groups</li>
   </ul>
 
-  <p>You can use a <a href="https://www.usability.gov/how-to-and-tools/methods/card-sorting.html">card sorting
+  <p>You can use a <a href="https://methods.18f.gov/validate/card-sorting/">card sorting
     activity</a> to determine what should go in and how to organize your site navigation.</p>
   <h3>How not to use it</h3>
   <p>Do not overload the site navigation with too many pages. And avoid using more than a handful of navigational items.
