--- a/pages/sample/structure-utility-header.html
+++ b/pages/sample/structure-utility-header.html
@@ -51,13 +51,13 @@ permalink: "structure/utility-header.html"
 
   <div class="tab-group responsive">
    <ul id="tabs2" class="nav nav-tabs" role="tablist">
-    <li class="nav-item">
+    <li class="nav-item" role="presentation">
      <a id="tab-example2" href="#pane-example2" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item" role="presentation">
      <a id="tab-html2" href="#pane-html2" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item" role="presentation">
      <a id="tab-include2" href="#pane-include2" class="nav-link" data-bs-toggle="tab" role="tab">Nunjucks include</a>
     </li>
    </ul>
@@ -76,11 +76,11 @@ permalink: "structure/utility-header.html"
      <div id="collapse-example2" class="collapse show" role="tabpanel" aria-labelledby="heading-example2">
       <div class="card-body">
        <h3 class="h4 m-t-0">Desktop</h3>
-       <img src="/images/components/strucutre-utility-header.jpg" alt="Utility header screenshot" class="img-fluid">
+       <img src="/images/components/structure-utility-header.svg" alt="Utility header screenshot" class="img-fluid">
 
        <h3 class="h4">Mobile</h3>
        <div class="col-md-6">
-        <img src="/images/components/strucutre-utility-header-mobile.jpg" alt="Mobile utility header screenshot"
+        <img src="/images/components/structure-utility-header-mobile.svg" alt="Mobile utility header screenshot"
          class="img-fluid">
        </div>
 
