--- a/pages/sample/structure-search.html
+++ b/pages/sample/structure-search.html
@@ -59,13 +59,13 @@ permalink: "structure/search.html"
 
   <div class="tab-group responsive">
    <ul id="tabs1" class="nav nav-tabs" role="tablist">
-    <li class="nav-item">
+    <li class="nav-item" role="presentation">
      <a id="tab-example1" href="#pane-example1" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item" role="presentation">
      <a id="tab-html1" href="#pane-html1" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item" role="presentation">
      <a id="tab-include1" href="#pane-include1" class="nav-link" data-bs-toggle="tab" role="tab">Nunjucks include</a>
     </li>
    </ul>
@@ -164,13 +164,13 @@ permalink: "structure/search.html"
   <!--start tabs2-->
   <div class="tab-group responsive">
    <ul id="tabs2" class="nav nav-tabs" role="tablist">
-    <li class="nav-item">
+    <li class="nav-item" role="presentation">
      <a id="tab-example2" href="#pane-example2" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item" role="presentation">
      <a id="tab-html2" href="#pane-html2" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item" role="presentation">
      <a id="tab-include2" href="#pane-include2" class="nav-link" data-bs-toggle="tab" role="tab">Nunjucks include</a>
     </li>
    </ul>
@@ -265,13 +265,13 @@ permalink: "structure/search.html"
   <!--start tabs3-->
   <div class="tab-group responsive">
    <ul id="tabs3" class="nav nav-tabs" role="tablist">
-    <li class="nav-item">
+    <li class="nav-item" role="presentation">
      <a id="tab-example3" href="#pane-example3" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item" role="presentation">
      <a id="tab-html3" href="#pane-html3" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item" role="presentation">
      <a id="tab-include3" href="#pane-include3" class="nav-link" data-bs-toggle="tab" role="tab">Nunjucks include</a>
     </li>
    </ul>
