fixed patterns pages and a11y issues

--- a/pages/sample/progress-tracker.html
+++ b/pages/sample/progress-tracker.html
@@ -24,10 +24,10 @@ permalink: "patterns/progress-tracker.html"
    <a id="tab-html1" href="#pane-html1" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
   </li>
  </ul>
- <div id="tab-content" class="tab-content">
+ <div id="tab-content1" class="tab-content">
   <div id="pane-example1" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example1">
    <div class="card-header" id="heading-example1">
-    <a data-bs-toggle="collapse" href="#collapse-example1" data-parent="#tab-content" aria-expanded="true"
+    <a data-bs-toggle="collapse" href="#collapse-example1" data-parent="#tab-content1" aria-expanded="true"
      aria-controls="collapse-example1" data-hash="#pane-example1" title="Example tab header">
      Example
     </a>
@@ -40,7 +40,7 @@ permalink: "patterns/progress-tracker.html"
   </div>
   <div id="pane-html1" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html1">
    <div class="card-header" id="heading-html1">
-    <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" data-parent="#tab-content"
+    <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" data-parent="#tab-content1"
      aria-expanded="false" aria-controls="collapse-html1" data-hash="#pane-html1" title="HTML Source code tab header">
      Source code
     </a>
@@ -65,10 +65,10 @@ permalink: "patterns/progress-tracker.html"
    <a id="tab-html2" href="#pane-html2" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
   </li>
  </ul>
- <div id="tab-content" class="tab-content">
+ <div id="tab-content2" class="tab-content">
   <div id="pane-example2" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example2">
    <div class="card-header" id="heading-example2">
-    <a data-bs-toggle="collapse" href="#collapse-example2" data-parent="#tab-content" aria-expanded="true"
+    <a data-bs-toggle="collapse" href="#collapse-example2" data-parent="#tab-content2" aria-expanded="true"
      aria-controls="collapse-example2" data-hash="#pane-example2" title="Example tab header">
      Example
     </a>
@@ -81,7 +81,7 @@ permalink: "patterns/progress-tracker.html"
   </div>
   <div id="pane-html2" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html2">
    <div class="card-header" id="heading-html2">
-    <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html2" data-parent="#tab-content"
+    <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html2" data-parent="#tab-content2"
      aria-expanded="false" aria-controls="collapse-html2" data-hash="#pane-html2" title="HTML Source code tab header">
      Source code
     </a>
@@ -105,10 +105,10 @@ permalink: "patterns/progress-tracker.html"
    <a id="tab-html3" href="#pane-html3" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
   </li>
  </ul>
- <div id="tab-content" class="tab-content">
+ <div id="tab-content3" class="tab-content">
   <div id="pane-example3" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example3">
    <div class="card-header" id="heading-example3">
-    <a data-bs-toggle="collapse" href="#collapse-example3" data-parent="#tab-content" aria-expanded="true"
+    <a data-bs-toggle="collapse" href="#collapse-example3" data-parent="#tab-content3" aria-expanded="true"
      aria-controls="collapse-example3" data-hash="#pane-example3" title="Example tab header">
      Example
     </a>
@@ -121,7 +121,7 @@ permalink: "patterns/progress-tracker.html"
   </div>
   <div id="pane-html3" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html3">
    <div class="card-header" id="heading-html3">
-    <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html3" data-parent="#tab-content"
+    <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html3" data-parent="#tab-content3"
      aria-expanded="false" aria-controls="collapse-html3" data-hash="#pane-html3" title="HTML Source code tab header">
      Source code
     </a>
