--- a/pages/sample/horizontal-separator.html
+++ b/pages/sample/horizontal-separator.html
@@ -6,6 +6,8 @@ permalink: "components/horizontal-separator.html"
 ---
 <h1 class="mt-lg-0">Horizontal separator</h1>
 <p>The horizontal separator is a style component that uses a line to separate content into sections.</p>
+<p class="subtitle">Other names: horizontal rule, divider</p>
+
 
 <h2 id="Sample">Sample</h2>
 
