Adding space in "How not to use it"

--- a/pages/sample/modal.html
+++ b/pages/sample/modal.html
@@ -96,9 +96,8 @@ permalink: "components/modal.html"
 <p>Do not use the modal for complex decision making that requires additional sources of information. </p>
 <p>Do not use for nonessential or unrelated information. </p>
 <p>Do not use modals to show confirmation, success, or error messages.</p>
-<p>Avoid multiple steps that require navigation within the modal.
- Simplify by removing unnecessary elements or content that does not support the task.
-</p>
+<p>Avoid multiple steps that require navigation within the modal.</p>
+<p>Simplify by removing unnecessary elements or content that does not support the task.</p>
 
 
 
