featured search fixes

--- a/pages/sample/structure-search.html
+++ b/pages/sample/structure-search.html
@@ -245,7 +245,8 @@ permalink: "structure/search.html"
 </div></code></pre>
 
 
-       <p><span class="text-highlight-primary">Note:</span> Path to the include will be relative to the directory of
+       <p class="m-t"><span class="text-highlight-primary">Note:</span> Path to the include will be relative to the
+        directory of
         your
         page.</p>
       </div>
@@ -333,9 +334,11 @@ permalink: "structure/search.html"
         since <code>page.njk</code> and <code>landing.njk</code>
         page layouts already use active search in their page header by default. The <code>.featured-search</code> class
         needs to be added
-        to the <code>#head-search</code> div in the header of your page. To do this, add the search: Featured parameter
+        to the <code>#head-search</code> div in the header of your page. To do this, add the
+        <code>search: Featured</code> parameter
         to your page front
-        matter data.</p>
+        matter data.
+       </p>
 
        <h3 class="h4">Include path</h3>
        <pre><code>&#123;% include "src/_includes/search.njk" %&#125;</code></pre>
