--- a/pages/sample/structure-search-featured.html
+++ b/pages/sample/structure-search-featured.html
@@ -18,7 +18,7 @@ search: Featured
     <ol class="breadcrumb">
      <li><a href="/index.html" title="Home page">Home</a></li>
      <li><a href="/structure.html" title="Structure landing page">Structure</a></li>
-     <li><a href="/structure/structure-search.html" title="Search landing page">Search</a></li>
+     <li><a href="/structure/search.html" title="Search landing page">Search</a></li>
      <li class="active">Featured search</li>
     </ol>
    </nav>
