--- a/pages/sample/accordions.html
+++ b/pages/sample/accordions.html
@@ -81,10 +81,10 @@ permalink: "/components/accordions.html"
 <div class="tab-group responsive">
  <ul id="tabs2" class="nav nav-tabs" role="tablist">
   <li class="nav-item">
-   <a id="tab-example3" href="#pane-example3" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
+   <a id="tab-example3" href="#pane-example3" class="nav-link active" data-bs-toggle="tab" role="tab" aria-label="Accordion list example">Example</a>
   </li>
   <li class="nav-item">
-   <a id="tab-html3" href="#pane-html3" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
+   <a id="tab-html3" href="#pane-html3" class="nav-link" data-bs-toggle="tab" role="tab" aria-label="Accordion list source code">Source code</a>
   </li>
 
  </ul>
