Fixing Modal accessibility

--- a/pages/sample/modal.html
+++ b/pages/sample/modal.html
@@ -106,7 +106,7 @@ permalink: "components/modal.html"
 
 
 <!-- Modal -->
-<div class="modal fade" id="news-headlines" role="dialog">
+<div class="modal fade" id="news-headlines" role="dialog" tabindex="-1">
  <div class="modal-dialog modal-lg">
   <div class="modal-content">
    <div class="modal-header">
